// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildCoverage renders with build 1`] = `
<div
  class="sc-bdVaJa kkDDII"
>
  <div
    class="sc-bdVaJa sc-gzVnrw djjrht"
  >
    <div
      class="sc-htoDjs jyKrAJ"
    >
      <p>
        Data from 
        <a>
          getsentry/zeus#650
        </a>
      </p>
      <p>
        <strong>
          Diff:
        </strong>
         88% lines covered (1628 / 1838)
      </p>
      <p>
        <strong>
          Overall:
        </strong>
         66% lines covered (6127 / 9187)
      </p>
    </div>
  </div>
  <div
    class="sc-bwzfXH sc-dnqmqq fkbtLh"
  >
    <div
      class="sc-bxivhb sc-iwsKbI dXJfbL ResultGrid-Header sc-htpNat iSNGhk sc-bdVaJa iHZvIS"
    >
      <div
        class="sc-htpNat dOzPHG ResultGrid-Column sc-bdVaJa kYmYWE"
      />
      <div
        class="sc-htpNat dOzPHG ResultGrid-Column sc-bdVaJa iQXtaW"
        style="text-align:right"
        width="250"
      >
        Diff
      </div>
      <div
        class="sc-htpNat dOzPHG ResultGrid-Column sc-bdVaJa iQXtaW"
        style="text-align:right"
        width="250"
      >
        Overall
      </div>
    </div>
    <div
      class="sc-ifAKCX sc-gZMcBi SyeIV good ResultGrid-Row sc-htpNat iSNGhk sc-bdVaJa iHZvIS"
    >
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa kYmYWE"
      >
        <a>
          conftest.py
        </a>
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
         
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        0 / 0
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        100%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        1 / 1
      </div>
    </div>
    <div
      class="sc-ifAKCX sc-gZMcBi SyeIV bad ResultGrid-Row sc-htpNat iSNGhk sc-bdVaJa iHZvIS"
    >
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa kYmYWE"
      >
        <a>
          setup.py
        </a>
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        0%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        0 / 8
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        0%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        0 / 8
      </div>
    </div>
    <div
      class="sc-ifAKCX sc-gZMcBi SyeIV warn ResultGrid-Row sc-htpNat iSNGhk sc-bdVaJa iHZvIS"
    >
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa kYmYWE"
      >
        <a>
          tests/zeus
        </a>
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        99%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        1,528 / 1530
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        99%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        1,528 / 1530
      </div>
    </div>
    <div
      class="sc-ifAKCX sc-gZMcBi SyeIV bad ResultGrid-Row sc-htpNat iSNGhk sc-bdVaJa iHZvIS"
    >
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa kYmYWE"
      >
        <a>
          webapp
        </a>
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        33%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        50 / 150
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        6%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        125 / 1840
      </div>
    </div>
    <div
      class="sc-ifAKCX sc-gZMcBi SyeIV bad ResultGrid-Row sc-htpNat iSNGhk sc-bdVaJa iHZvIS"
    >
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa kYmYWE"
      >
        <a>
          zeus
        </a>
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        33%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        50 / 150
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        77%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        4,473 / 5808
      </div>
    </div>
  </div>
</div>
`;

exports[`BuildCoverage renders without build 1`] = `
<div
  class="sc-bdVaJa kkDDII"
>
  <div
    class="sc-bdVaJa sc-gzVnrw djjrht"
  >
    <div
      class="sc-htoDjs jyKrAJ"
    >
      <p>
        <strong>
          Diff:
        </strong>
         88% lines covered (1628 / 1838)
      </p>
      <p>
        <strong>
          Overall:
        </strong>
         66% lines covered (6127 / 9187)
      </p>
    </div>
  </div>
  <div
    class="sc-bwzfXH sc-dnqmqq fkbtLh"
  >
    <div
      class="sc-bxivhb sc-iwsKbI dXJfbL ResultGrid-Header sc-htpNat iSNGhk sc-bdVaJa iHZvIS"
    >
      <div
        class="sc-htpNat dOzPHG ResultGrid-Column sc-bdVaJa kYmYWE"
      />
      <div
        class="sc-htpNat dOzPHG ResultGrid-Column sc-bdVaJa iQXtaW"
        style="text-align:right"
        width="250"
      >
        Diff
      </div>
      <div
        class="sc-htpNat dOzPHG ResultGrid-Column sc-bdVaJa iQXtaW"
        style="text-align:right"
        width="250"
      >
        Overall
      </div>
    </div>
    <div
      class="sc-ifAKCX sc-gZMcBi SyeIV good ResultGrid-Row sc-htpNat iSNGhk sc-bdVaJa iHZvIS"
    >
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa kYmYWE"
      >
        <a>
          conftest.py
        </a>
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
         
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        0 / 0
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        100%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        1 / 1
      </div>
    </div>
    <div
      class="sc-ifAKCX sc-gZMcBi SyeIV bad ResultGrid-Row sc-htpNat iSNGhk sc-bdVaJa iHZvIS"
    >
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa kYmYWE"
      >
        <a>
          setup.py
        </a>
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        0%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        0 / 8
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        0%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        0 / 8
      </div>
    </div>
    <div
      class="sc-ifAKCX sc-gZMcBi SyeIV warn ResultGrid-Row sc-htpNat iSNGhk sc-bdVaJa iHZvIS"
    >
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa kYmYWE"
      >
        <a>
          tests/zeus
        </a>
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        99%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        1,528 / 1530
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        99%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        1,528 / 1530
      </div>
    </div>
    <div
      class="sc-ifAKCX sc-gZMcBi SyeIV bad ResultGrid-Row sc-htpNat iSNGhk sc-bdVaJa iHZvIS"
    >
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa kYmYWE"
      >
        <a>
          webapp
        </a>
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        33%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        50 / 150
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        6%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        125 / 1840
      </div>
    </div>
    <div
      class="sc-ifAKCX sc-gZMcBi SyeIV bad ResultGrid-Row sc-htpNat iSNGhk sc-bdVaJa iHZvIS"
    >
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa kYmYWE"
      >
        <a>
          zeus
        </a>
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        33%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        50 / 150
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        77%
      </div>
      <div
        class="sc-htpNat sc-gqjmRU bkdLOV ResultGrid-Column sc-bdVaJa dYmHol"
        style="text-align:right"
        width="120"
      >
        4,473 / 5808
      </div>
    </div>
  </div>
</div>
`;
